<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/main_layout_main"
    tools:context="com.example.android.projectten_inventoryapp.MainActivity">
    <LinearLayout
        style="@style/main_layout_second">
         <TextView
             style="@style/main_layout_first_line"
            android:text="@string/first_line_name" />
        <TextView
            style="@style/main_layout_second_line"
            android:text="@string/second_line_name" />
        <TextView
            style="@style/main_layout_third_line"
            android:text="@string/third_line_name"/>
        <TextView
            style="@style/main_layout_fourth_line"
            android:text="@string/fourth_line_name" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cat_paw"
        style="@style/main_layout_flouting_button"
        android:src="@drawable/ic_add_pet" />

    <ListView
        android:id="@+id/list_view_product"
        style="@style/main_layout_third" />

    <RelativeLayout
        android:id="@+id/list_view"
        style="@style/main_layout_main_relative">

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/main_layout_relative"
            android:text="@string/nothing_inStore" />
    </RelativeLayout>

</RelativeLayout>